--- a/sidebar_template.html
+++ b/sidebar_template.html
@@ -8,6 +8,18 @@
     <title>Sidebar Template Page</title>
 </head>
 <body>
-    TEST
+    <header>
+        <div class="brand-title">Welsh Gov Digital</div>
+        <div class="site-title">Resource</div>
+    </header>
+    <nav>
+
+    </nav>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
